# blago

./: Cargo.toml  README.md  build.rs  coverage.lcov
.github/workflows/: build.yml  publish.yaml
src/: cli.rs  extractor.rs  main.rs
src/extractor/: lha.rs  rar.rs  sevenz.rs  tar.rs  zip.rs
